tests/ui/feature-gates/feature-gate-loop-hints.stderr
error[E0658]: the `#[unroll]` attribute is an experimental feature
  --> $DIR/feature-gate-loop-hints.rs:2:5
   |
LL |     #[unroll]
   |     ^^^^^^^^^
   |
   = note: see issue #156874 <https://github.com/rust-lang/rust/issues/156874> for more information
   = help: add `#![feature(loop_hints)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
